--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>DemoApp</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
